# verax

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: build_and_test.yml
axiom/.github/workflows/: test.yml
axiom/logical_plan/: CMakeLists.txt  Expr.cpp  Expr.h  ExprApi.cpp  ExprApi.h  ExprPrinter.cpp  ExprPrinter.h  ExprVisitor.h  LogicalPlanNode.cpp  LogicalPlanNode.h  NameAllocator.cpp  NameAllocator.h  NameMappings.cpp  NameMappings.h  PlanBuilder.cpp  PlanBuilder.h  PlanNodeVisitor.h  PlanPrinter.cpp  PlanPrinter.h
axiom/logical_plan/tests/: CMakeLists.txt  ExprApiTest.cpp  NameAllocatorTest.cpp  NameMappingsTest.cpp  PlanPrinterTest.cpp
axiom/optimizer/: ArenaCache.h  BitSet.cpp  BitSet.h  CMakeLists.txt  Cost.cpp  Cost.h  DerivedTable.cpp  DerivedTable.h  Filters.cpp  Filters.h  FunctionRegistry.cpp  FunctionRegistry.h  JoinSample.cpp  JsonUtil.h  LogicalPlanSubfields.cpp  LogicalPlanToGraph.cpp  Model.cpp  Model.h  ParallelExpr.cpp  ParallelProject.cpp  ParallelProject.h  Plan.cpp  Plan.h  PlanObject.cpp  PlanObject.h  PlanUtils.cpp  PlanUtils.h  QueryGraph.cpp  QueryGraph.h  QueryGraphContext.cpp  QueryGraphContext.h  README.md  RelationOp.cpp  RelationOp.h  Schema.cpp  Schema.h  SchemaResolver.cpp  SchemaResolver.h  SchemaUtils.cpp  Subfields.cpp  (+4 more)
axiom/optimizer/connectors/: CMakeLists.txt  ConnectorMetadata.cpp  ConnectorMetadata.h  ConnectorSplitSource.cpp  ConnectorSplitSource.h  StatisticsBuilder.cpp
axiom/optimizer/connectors/hive/: HiveConnectorMetadata.cpp  HiveConnectorMetadata.h  LocalHiveConnectorMetadata.cpp  LocalHiveConnectorMetadata.h
axiom/optimizer/connectors/hive/tests/: HiveConnectorMetadataTest.cpp
axiom/optimizer/connectors/tests/: CMakeLists.txt  TestConnector.cpp  TestConnector.h
axiom/optimizer/connectors/tpch/: CMakeLists.txt  TpchConnectorMetadata.cpp  TpchConnectorMetadata.h
axiom/optimizer/connectors/tpch/tests/: CMakeLists.txt  TpchConnectorMetadataTest.cpp
axiom/optimizer/tests/: CMakeLists.txt  FeatureGen.cpp  FeatureGen.h  Genies.cpp  Genies.h  LogicalSubfieldTest.cpp  ModelTest.cpp  ParquetTpchTest.cpp  ParquetTpchTest.h  PlanMatcher.cpp  PlanMatcher.h  PlanTest.cpp  QuerySqlParser.cpp  QuerySqlParser.h  QueryTestBase.cpp  QueryTestBase.h  SchemaResolverTest.cpp  SchemaUtilsTest.cpp  SubfieldTest.cpp  Tpch.cpp  Tpch.h  TpchPlanTest.cpp  VeloxSql.cpp
axiom/optimizer/tests/tpch.queries/: q1.sql  q3.sql  q5.sql
axiom/optimizer/tests/utils/: CMakeLists.txt  DfFunctions.cpp  DfFunctions.h  RowFunctions.cpp
axiom/sql/presto/: CMakeLists.txt  PrestoSql.g4  PrestoSqlBaseListener.cpp  PrestoSqlBaseListener.h  PrestoSqlBaseVisitor.cpp  PrestoSqlBaseVisitor.h  PrestoSqlLexer.cpp  PrestoSqlLexer.h  PrestoSqlListener.cpp  PrestoSqlListener.h  PrestoSqlParser.cpp  PrestoSqlParser.h  PrestoSqlVisitor.cpp  PrestoSqlVisitor.h  README.md
axiom/sql/presto/tests/: CMakeLists.txt  GrammarTest.cpp  ParserHelper.cpp  ParserHelper.h  UpperCasedInput.h
frontend/logical_plan/: CMakeLists.txt  Expr.cpp  Expr.h  ExprPrinter.cpp  ExprPrinter.h  ExprVisitor.h  LogicalPlanNode.cpp  LogicalPlanNode.h  PlanBuilder.cpp  PlanBuilder.h  PlanNodeVisitor.h  PlanPrinter.cpp  PlanPrinter.h
frontend/logical_plan/tests/: CMakeLists.txt  NameAllocatorTest.cpp  NameMappingsTest.cpp  PlanPrinterTest.cpp
frontend/optimizer/: ArenaCache.h  BitSet.cpp  BitSet.h  CMakeLists.txt  Cost.cpp  Cost.h  Filters.cpp  Filters.h  FunctionRegistry.cpp  FunctionRegistry.h  JoinSample.cpp  JsonUtil.h  ParallelExpr.cpp  ParallelProject.cpp  ParallelProject.h  Plan.cpp  Plan.h  PlanObject.cpp  PlanObject.h  PlanUtils.cpp  PlanUtils.h  QueryGraph.cpp  QueryGraph.h  QueryGraphContext.cpp  QueryGraphContext.h  RelationOp.cpp  RelationOp.h  Schema.cpp  Schema.h  SchemaResolver.cpp  SchemaResolver.h  SchemaUtils.cpp  SchemaUtils.h  Subfields.cpp  ToGraph.cpp  ToVelox.cpp  VeloxHistory.cpp  VeloxHistory.h
frontend/optimizer/connectors/: ConnectorMetadata.cpp  ConnectorMetadata.h  ConnectorSplitSource.cpp  ConnectorSplitSource.h  StatisticsBuilder.cpp
frontend/optimizer/connectors/hive/: CMakeLists.txt  HiveConnectorMetadata.cpp  HiveConnectorMetadata.h  LocalHiveConnectorMetadata.cpp  LocalHiveConnectorMetadata.h
frontend/optimizer/connectors/hive/tests/: CMakeLists.txt  HiveConnectorMetadataTest.cpp
frontend/optimizer/connectors/tests/: TestConnector.h
frontend/optimizer/connectors/tpch/: CMakeLists.txt  TpchConnectorMetadata.cpp  TpchConnectorMetadata.h
frontend/optimizer/connectors/tpch/tests/: CMakeLists.txt  TpchConnectorMetadataTest.cpp
frontend/optimizer/public_tld/: CMakeLists.txt  CONTRIBUTING.md  README.md
frontend/optimizer/tests/: FeatureGen.cpp  ParquetTpchTest.cpp  ParquetTpchTest.h  PlanTest.cpp  QueryTestBase.cpp  QueryTestBase.h  SchemaResolverTest.cpp  SchemaUtilsTest.cpp  SubfieldTest.cpp  Tpch.cpp  Tpch.h  VeloxSql.cpp
